Updated files to last version with graphs

--- a/data_visualisation.ipynb
+++ b/data_visualisation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\IIB Project\\data_processing.py:24: DtypeWarning: Columns (35,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  tags_ecg_trial = pd.read_csv(r\"Data\\\\trial\\\\rec_data_anon.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "## IMPORT MODULES\n",
     "import numpy as np\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,15 +46,7 @@
      "text": [
       "num labeled AF: 16 \n",
       "num possibly AF: 3687\n",
-      "[3649, 5206, 6517, 6548, 6718, 6722, 7613, 7615, 8924, 10763, 15003, 15004, 15005, 15009, 15026, 15825]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\docto\\AppData\\Local\\Temp\\ipykernel_3756\\2392797125.py:6: DtypeWarning: Columns (18,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_tags_ecg = pd.read_csv(r\"Data\\\\feas2\\\\rec_data_anon.csv\")\n"
+      "[3460, 3461, 3462, 3466, 3483, 8809, 10820, 16378, 17083, 17114, 19476, 21172, 21176, 22158, 22911, 22913]\n"
      ]
     }
    ],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,9 +123,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'E:\\\\IIB-data\\\\ECGs\\\\feas2\\\\001000\\\\saferF2_001343.hea'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m measID_vis \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m6\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mstr\u001b[39m(measID_num)))\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(measID_num)\n\u001b[0;32m      9\u001b[0m folder_vis \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m3\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mstr\u001b[39m(measID_num\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m1000\u001b[39m)))\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(measID_num\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m1000\u001b[39m)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m3\u001b[39m\n\u001b[1;32m---> 10\u001b[0m record \u001b[38;5;241m=\u001b[39m \u001b[43mwfdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrdrecord\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mE:\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mIIB-data\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mECGs\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43mfeas2\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mfolder_vis\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43msaferF2_\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mmeasID_vis\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\docto\\anaconda3\\lib\\site-packages\\wfdb\\io\\record.py:1154\u001b[0m, in \u001b[0;36mrdrecord\u001b[1;34m(record_name, sampfrom, sampto, channels, physical, pb_dir, m2s, smooth_frames, ignore_skew, return_res, force_channels, channel_names, warn_empty)\u001b[0m\n\u001b[0;32m   1151\u001b[0m dir_name \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(dir_name)\n\u001b[0;32m   1153\u001b[0m \u001b[38;5;66;03m# Read the header fields\u001b[39;00m\n\u001b[1;32m-> 1154\u001b[0m record \u001b[38;5;241m=\u001b[39m \u001b[43mrdheader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrecord_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpb_dir\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpb_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrd_segments\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m   1156\u001b[0m \u001b[38;5;66;03m# Set defaults for sampto and channels input variables\u001b[39;00m\n\u001b[0;32m   1157\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sampto \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1158\u001b[0m     \u001b[38;5;66;03m# If the header does not contain the signal length, figure it\u001b[39;00m\n\u001b[0;32m   1159\u001b[0m     \u001b[38;5;66;03m# out from the first dat file. This is only possible for single\u001b[39;00m\n\u001b[0;32m   1160\u001b[0m     \u001b[38;5;66;03m# segment records. If there are no signals, sig_len is 0.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\docto\\anaconda3\\lib\\site-packages\\wfdb\\io\\record.py:990\u001b[0m, in \u001b[0;36mrdheader\u001b[1;34m(record_name, pb_dir, rd_segments)\u001b[0m\n\u001b[0;32m    987\u001b[0m dir_name \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(dir_name)\n\u001b[0;32m    989\u001b[0m \u001b[38;5;66;03m# Read the header file. Separate comment and non-comment lines\u001b[39;00m\n\u001b[1;32m--> 990\u001b[0m header_lines, comment_lines \u001b[38;5;241m=\u001b[39m \u001b[43m_header\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_read_header_lines\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbase_record_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    991\u001b[0m \u001b[43m                                                         \u001b[49m\u001b[43mdir_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpb_dir\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    993\u001b[0m \u001b[38;5;66;03m# Get fields from record line\u001b[39;00m\n\u001b[0;32m    994\u001b[0m record_fields \u001b[38;5;241m=\u001b[39m _header\u001b[38;5;241m.\u001b[39m_parse_record_line(header_lines[\u001b[38;5;241m0\u001b[39m])\n",
+      "File \u001b[1;32mc:\\Users\\docto\\anaconda3\\lib\\site-packages\\wfdb\\io\\_header.py:705\u001b[0m, in \u001b[0;36m_read_header_lines\u001b[1;34m(base_record_name, dir_name, pb_dir)\u001b[0m\n\u001b[0;32m    703\u001b[0m \u001b[38;5;66;03m# Read local file\u001b[39;00m\n\u001b[0;32m    704\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m pb_dir \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 705\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[0;32m    706\u001b[0m         \u001b[38;5;66;03m# Record line followed by signal/segment lines if any\u001b[39;00m\n\u001b[0;32m    707\u001b[0m         header_lines \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    708\u001b[0m         \u001b[38;5;66;03m# Comment lines\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'E:\\\\IIB-data\\\\ECGs\\\\feas2\\\\001000\\\\saferF2_001343.hea'"
+     ]
+    }
+   ],
    "source": [
     "## SELECTION OF ECG WITHIN STUDY\n",
     "## VISUALISATION\n",
@@ -135,19 +151,23 @@
     "\n",
     "measID_vis = \"0\"*(6-len(str(measID_num)))+str(measID_num)\n",
     "folder_vis = \"0\"*(3-len(str(measID_num//1000)))+str(measID_num//1000)+\"0\"*3\n",
-    "record = wfdb.rdrecord(\"Data\\\\ECGs\\\\feas2\\\\\"+folder_vis+\"\\\\saferF2_\"+measID_vis)"
+    "record = wfdb.rdrecord(\"E:\\\\IIB-data\\\\ECGs\\\\feas2\\\\\"+folder_vis+\"\\\\saferF2_\"+measID_vis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15200\n"
+     "ename": "NameError",
+     "evalue": "name 'record' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m## DATA PREPROCESSING (REMOVING GENERAL TREND)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m raw_record \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray\u001b[38;5;241m.\u001b[39mflatten(\u001b[43mrecord\u001b[49m\u001b[38;5;241m.\u001b[39mp_signal)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(raw_record))\n\u001b[0;32m      4\u001b[0m fs \u001b[38;5;241m=\u001b[39m record\u001b[38;5;241m.\u001b[39mfs\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'record' is not defined"
      ]
     }
    ],
@@ -419,6 +439,46 @@
     "# DWTcoeffs[-8] = np.zeros_like(DWTcoeffs[-8])\n",
     "# DWTcoeffs[-9] = np.zeros_like(DWTcoeffs[-9])\n",
     "filtered_data_dwt = pywt.waverec(DWTcoeffs,'db4',mode='symmetric',axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wfdb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m physionet_sample \u001b[38;5;241m=\u001b[39m \u001b[43mwfdb\u001b[49m\u001b[38;5;241m.\u001b[39mrdrecord(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPhysionet challenge\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mphysionet-challenge-2017\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mtraining2017\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mA00084\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m physionet_sample_signal \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray\u001b[38;5;241m.\u001b[39mflatten(physionet_sample\u001b[38;5;241m.\u001b[39mp_signal)\n\u001b[0;32m      3\u001b[0m fs \u001b[38;5;241m=\u001b[39m physionet_sample\u001b[38;5;241m.\u001b[39mfs\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'wfdb' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "physionet_sample = wfdb.rdrecord(\"Physionet challenge\\\\physionet-challenge-2017\\\\training2017\\\\A00084\")\n",
+    "physionet_sample_signal = np.ndarray.flatten(physionet_sample.p_signal)\n",
+    "fs = physionet_sample.fs\n",
+    "\n",
+    "start, end = 6000, 10000\n",
+    "i = 8986\n",
+    "x = np.linspace(start/15000, end/15000, end-start)\n",
+    "fig, ax = plt.subplots(2,1)\n",
+    "fig.set_figwidth(18)\n",
+    "fig.set_figheight(13)\n",
+    "ax[0].plot(x, ecg.extract_signal(235645, study='trial')[start:end])\n",
+    "ax[0].set_title('Normal Sinus Rhythm', fontsize=20)\n",
+    "ax[0].set_xlabel('time (s)', fontsize=14)\n",
+    "ax[0].set_ylabel('Voltage', fontsize=14)\n",
+    "\n",
+    "ax[1].plot(physionet_sample_signal)\n",
+    "# ax[1].plot(x, ecg.extract_signal(i, study='trial')[start:end])\n",
+    "ax[1].set_title('AF', fontsize=20)\n",
+    "ax[1].set_xlabel('time (s)', fontsize=14)\n",
+    "ax[1].set_ylabel('Voltage', fontsize=14)"
    ]
   },
   {
